# max_programare_ceiti

./: .clang-format  .editorconfig  .prettierrc  README.md  java-formatter.xml
Anul 1/olimpiada/: casa_scoala_casa.cpp  numere.cpp  scadere_indelungata.cpp  tara_minunilor.cpp
Anul 1/practica/: bauturi.xlsx  prezentare.pptx  raport.docx
Anul 2/programareaCalculatoarelor/Lectia 2 - Doubly Linked Lists/: CMakeLists.txt  README.md
Anul 2/programareaCalculatoarelor/Lectia 2 - Doubly Linked Lists/include/linkedLists/: LinkedList.hpp
Anul 2/programareaCalculatoarelor/Lectia 2 - Doubly Linked Lists/src/: linkedList.cpp  main.cpp
Anul 2/programareaCalculatoarelor/Pregatire Examen/: CMakeLists.txt  README.md
Anul 2/programareaCalculatoarelor/Pregatire Examen/include/exercises/: Exercises.hpp
Anul 2/programareaCalculatoarelor/Pregatire Examen/src/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  main.cpp
programareProcedurala/practica/: bauturi.xlsx  raport.docx
programareStructurata/olimpiada/: alinierea_militarilor.cpp  numar_pierdut.cpp  numere.cpp  tabla_de_sah.cpp  tara_minunilor.cpp
structured_programming/classwork/: 11_october_2024.cpp  12_november_2024.cpp  22_november_2024.cpp  22_octombrie_2024.cpp  26_november_2024.cpp  5_november_2024.cpp  8_november_2024.cpp  8_octombrie_2024.cpp
structured_programming/homework/: 17_septembrie_2024.cpp  18_october_2024.cpp  18_octombrie_2024.cpp  1_november_2024.cpp  20_septembrie_2024.cpp  5_november_2024.cpp  6_october_2024.cpp  6_octombrie_2024.cpp
structured_programming/individual_study/: individual_studi_2.cpp  (+3 more)
(+463 files in other folders)
